--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   awyes:
     image: awyes
     build: .
+    entrypoint: sh
     volumes:
       - .:/code
+      - ~/.aws:/root/.aws
       - /var/run/docker.sock:/var/run/docker.sock
