--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,14 @@
 authors = ["trumanpurnell <truman.purnell@gmail.com>"]
 description = "Simplify aws deployment"
 name = "awyes"
-version = "1.0.48"
+version = "2.0.1"
 
 [tool.poetry.dependencies]
 boto3 = "^1.17.62"
 python = "^3.7"
 requests = "^2.25.1"
 docker = "^5.0.0"
+PyYAML = "^5.4.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
