--- a/Pipfile
+++ b/Pipfile
@@ -3,13 +3,8 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[packages]
-boto3 = "*"
-docker = "*"
-pyyaml = "*"
-requests = "*"
-
 [scripts]
 test = "pipenv run python deployment_test.py"
-version = "python setup.py sdist bdist_wheel"
-upload = "twine upload --verbose --skip-existing dist/*"
+
+[packages]
+awyes = {editable = true, path = "."}
