--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           pipenv install --system
 
       # Bump version and create a new tag
-      - name: Bump version, create tag and push it
+      - name: Bump version and create tag
         run: |
           current_version=$(head -n 1 VERSION)
           new_version=$(python -c "import semver; print(semver.bump_patch('$current_version'))")
@@ -40,6 +40,11 @@ jobs:
           git config user.email "truman.purnell@gmail.com"
           git commit -am "Bump version to $new_version"
           git tag $new_version
+
+      # Push the new tag to the repository
+      - name: Push new tag
+        if: github.ref == 'refs/heads/main'
+        run: |
           git push origin $new_version
 
       # Publish the package to PyPI (optional)
