try to push tags

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Push new tag
         if: github.ref == 'refs/heads/main'
         run: |
-          git push origin $new_version
+          git push origin main
+          git push origin --tags
 
       # Publish the package to PyPI (optional)
       - name: Publish to PyPI
