--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,12 @@ jobs:
           pipenv install --system
 
       # Bump version and create a new tag
-      - name: Bump version and create tag
+      - name: Bump version and create tag (if applicable)
         run: |
+          message=${{ github.event.head_commit.message }}
+
+          echo "did ya get it? $message"
+
           current_version=$(python -c "import awyes; print(awyes.__version__)")
           new_version=$(python -c "import semver; print(semver.bump_patch('$current_version'))")
 
