--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       # Bump version and create a new tag
       - name: Bump version and create tag (if applicable)
         run: |
-          commit_message=$(git show -s --format=%s)
+          commit_message=$(git log -1 --pretty=format:"%s")
 
           echo "did ya get it? $message"
 
