chore: this should skip version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,21 +32,24 @@ jobs:
         run: |
           commit_message=$(git log -1 --pretty=format:"%s")
           bump_type=$(echo $commit_message | cut -d "[" -f2 | cut -d "]" -f1)
-          
-          echo "did ya get it? $bump_type"
 
-          if [[ $bump_type ]]; then
-            current_version=$(python -c "import awyes; print(awyes.__version__)")
-            new_version=$(python -c "import semver; print(semver.bump_patch('$current_version'))")
+          case "$bump_type" in
+            "patch") ;&
+            "minor") ;&
+            "major")
+              current_version=$(python -c "import awyes; print(awyes.__version__)")
+              new_version=$(python -c "import semver; print(semver.bump_$bump_type('$current_version'))")
 
-            echo "Bumping version from $current_version to $new_version"
-            echo "__version__ = \"$new_version\"" > awyes/__init__.py
+              echo "Bumping version from $current_version to $new_version"
+              echo "__version__ = \"$new_version\"" > awyes/__init__.py
 
-            git config user.name "trumanpurnell"
-            git config user.email "truman.purnell@gmail.com"
-            git commit -am "Bump version to $new_version"
-            git tag $new_version
-          fi
+              git config user.name "trumanpurnell"
+              git config user.email "truman.purnell@gmail.com"
+              git commit -am "Bump version to $new_version"
+              git tag $new_version
+              ;;
+            *) ;;
+          esac
 
       # Push the new tag to the repository
       - name: Push new tag
