Add ability to select which nodes run with `workflow` tags

--- a/action.yml
+++ b/action.yml
@@ -9,8 +9,13 @@ inputs:
     description: "Path to your awyes.yml file."
     required: false
     default: "./awyes.yml"
+  workflow:
+    description: "Workflow to run within aws yaml"
+    required: false
+    default: "init"
 runs:
   using: "docker"
   image: "Dockerfile"
   args:
     - ${{ inputs.path }}
+    - ${{ inputs.workflow }}
