--- a/Pipfile
+++ b/Pipfile
@@ -5,3 +5,6 @@ verify_ssl = true
 
 [packages]
 awyes = {editable = true, path = "."}
+
+[scripts]
+patch = "gh workflow run 'Python Package Release'"
